volexc/tests/ui/parse_missing_variant_index.out
Error: found "}"
   ╭─[parse_missing_variant_index.vol:4:1]
   │
 4 │ }
   │ ┬  
   │ ╰── Unexpected '}'
───╯