volexc/tests/ui/parse_missing_variant_index.vol
// Missing variant index in union
union Foo {
    Bar(u32) =
}
